# oldrar

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: codec.rs  crypto.rs  detect.rs  error.rs  features.rs  lib.rs  main.rs  rar13.rs  version.rs
tests/: cli.rs  rar13_fixtures.rs
tests/fixtures/rar13/: BIG80K.RAR  CMULTIV.R00  CMULTIV.R01  CMULTIV.R02  CMULTIV.R03  CMULTIV.R04  CMULTIV.R05  CMULTIV.R06  CMULTIV.RAR  COMMENT.RAR  EMPTY.RAR  FCOMM.RAR  MULTIFIL.RAR  MULTIVOL.R00  MULTIVOL.R01  MULTIVOL.R02  MULTIVOL.RAR  REPEATB.RAR  SOLID.RAR  STOREPWD.RAR  WITHDIR.RAR
