[package]
name = "oldrar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Reader and writer for legacy RAR 1.3/1.4 RE~^ archives"
repository = "https://github.com/gaz/oldrar"
readme = "README.md"
keywords = ["rar", "archive", "legacy", "unrar"]
categories = ["compression", "filesystem"]

[dependencies]

[[bin]]
name = "oldrar"
path = "src/main.rs"
